--- a/dist - 副本/index.html
+++ b/dist - 副本/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <title>SDLG好司机</title>
@@ -84,36 +83,12 @@
 
         #musicControl a {
             display: inline-block;
-            width: 25px;
-            height: 25px;
+            width: 35px;
+            height: 35px;
             overflow: hidden;
-            background: url('./assets/img/play.png') no-repeat;
+            background: url('./assets/img/record.png') no-repeat;
             background-size: 100%;
-        }
-
-        #musicControl a audio {
-            width: 100%;
-            height: 56px;
-        }
-
-        #musicControl a.stop {
-            background-position: left bottom;
-        }
-
-        #musicControl a.on {
-            background-position: 0px 1px;
-            -webkit-animation: reverseRotataZ 1.2s linear infinite;
-        }
-
-        #music_play_filter {
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: 99999998;
-        }
+        }    
 
         .btn_start {
             width: 150px;
@@ -156,15 +131,13 @@
 </head>
 
 <body>
-    <!--
+    
     <span id="musicControl">
-        <a id="mc_play" class="on" onclick="play_music();">
-            <audio id="musicfx" loop="loop" autoplay="autoplay">
-                <source src="./mp3/1.mp3" type="audio/mpeg">
-            </audio>
+        <a class="on" title="游戏记录" onclick="btn_record();">
+            
         </a>
     </span>
--->
+
     <audio id="a1" src="./mp3/a1.mp3"></audio>
     <div class="btn">
         <input class="teltext" type="tel" placeholder="请输入手机号">
@@ -179,13 +152,21 @@
     <script>
         function btn_start() {
             var telphone = document.getElementsByClassName("teltext")[0].value;
-            console.log(telphone)
             var flag = $("#ck_game").prop('checked');
             if (telphone.length != 11 || !flag) {
                 return;
             }
             window.localStorage.setItem("telphone", telphone);
             window.location.href = "./main.html";
+        }
+        function btn_record() {
+            var telphone = document.getElementsByClassName("teltext")[0].value;
+            var flag = $("#ck_game").prop('checked');
+            if (telphone.length != 11 || !flag) {
+                return;
+            }
+            window.localStorage.setItem("telphone", telphone);
+            window.location.href = "./record.html";
         }
         window.onload = function () {
             var tel = window.localStorage.getItem("telphone");
@@ -244,27 +225,27 @@
                 }
             }
             var play_filter = document.getElementById('music_play_filter');
-            play_filter.addEventListener('click', function () {
-                just_play(1);
-            });
-            play_filter.addEventListener('touchstart', function () {
-                just_play(1);
-            });
-            play_filter.addEventListener('touchend', function () {
-                just_play(1);
-            });
-            play_filter.addEventListener('touchmove', function () {
-                just_play(1);
-            });
-            play_filter.addEventListener('mousedown', function () {
-                just_play(1);
-            });
-            play_filter.addEventListener('mouseup', function () {
-                just_play(1);
-            });
-            play_filter.addEventListener('mousemove', function () {
-                just_play(1);
-            });
+            // play_filter.addEventListener('click', function () {
+            //     just_play(1);
+            // });
+            // play_filter.addEventListener('touchstart', function () {
+            //     just_play(1);
+            // });
+            // play_filter.addEventListener('touchend', function () {
+            //     just_play(1);
+            // });
+            // play_filter.addEventListener('touchmove', function () {
+            //     just_play(1);
+            // });
+            // play_filter.addEventListener('mousedown', function () {
+            //     just_play(1);
+            // });
+            // play_filter.addEventListener('mouseup', function () {
+            //     just_play(1);
+            // });
+            // play_filter.addEventListener('mousemove', function () {
+            //     just_play(1);
+            // });
 
 
 
