--- a/dist - 副本/result.html
+++ b/dist - 副本/result.html
@@ -48,7 +48,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: url(./assets/img/result.png) no-repeat center 0px;
+            background: url(./assets/img/result.jpg) no-repeat center 0px;
             background-position: center 0;
             background-size: cover;
             width: 100%;
@@ -123,25 +123,13 @@
             border-radius: 25px;
             background-image: url("./assets/img/btn_again.png");
             background-size: 100% 100%;
-            float: left;
             margin-bottom: 50px;
         }
 
-        .btn_share {
-            width: 110px;
-            height: 67px;
-            border: none;
-            border-radius: 25px;
-            background-image: url("./assets/img/btn_share.png");
-            background-size: 100% 100%;
-            float: left;
-            margin-left: 30px;
-        }
-
         .btn {
-            bottom: 5%;
-            left: 39%;
-            position: absolute;
+            margin-top: 50%;
+            text-align: center;
+            position: relative;
         }
         .num{
             font-size: 50px;
@@ -166,9 +154,7 @@
     </span>
     <h2 id= "amount" class="num"></h2>
     <div class="btn">
-        <button class="btn_again" onclick="btn_next()"></button>
-        <!-- <button class="btn_share" onclick="share_click()"></button> -->
-   
+        <button class="btn_again" onclick="btn_next()"></button>   
         </br>
         <a class="record" href="./record.html">查看游戏记录</a>
     </div>
